Fix HTML encoding issues in dashboard.html

--- a/dashboard.html
+++ b/dashboard.html
@@ -190,7 +190,7 @@ document.getElementById("logout-btn").addEventListener("click", function (e) {
 /* -----------------------------
    GLOBAL CONFIG
 ------------------------------ */
-const API_URL = "http://192.168.100.13:5000";
+const API_URL = "https://latestback-h32i.onrender.com";
 const token = localStorage.getItem("access_token");
 const userId = localStorage.getItem("user_id");
 
@@ -265,4 +265,5 @@ document.addEventListener("DOMContentLoaded", () => {
   </script>
   <script src="js/device.js"></script>
 </body>
+
 </html>
