--- a/healthlogs.html
+++ b/healthlogs.html
@@ -88,7 +88,7 @@
   </div>
 
   <script>
-    const FLASK_URL = 'http://192.168.100.13:5000';
+    const FLASK_URL = 'https://latestback-h32i.onrender.com';
     const token = localStorage.getItem("access_token");
     const tableBody = document.getElementById("health-log-body");
     const refreshBtn = document.getElementById("refresh-btn");
@@ -187,3 +187,4 @@
   </script>
 </body>
 </html>
+
