--- a/signup.html
+++ b/signup.html
@@ -61,7 +61,7 @@
     }
 
     // ✅ Flask backend URL - CHANGE THIS TO YOUR COMPUTER'S IP
-    const FLASK_URL = 'http://192.168.100.13:5000';
+    const FLASK_URL = 'https://latestback-h32i.onrender.com';
 
     document.getElementById("signupForm").addEventListener("submit", async (e) => {
       e.preventDefault();
@@ -119,4 +119,5 @@
     });
   </script>
 </body>
+
 </html>
